--- a/src/main/resources/templates/vistas_profesor/registrar_asistencia_consultar_horarios.html
+++ b/src/main/resources/templates/vistas_profesor/registrar_asistencia_consultar_horarios.html
@@ -25,10 +25,24 @@
     <script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    <script src="https://cdn.datatables.net/plug-ins/1.10.21/i18n/Spanish.json"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>   
+    
 </head>
 <body>
+    <script th:inline="javascript">
+    function eval(idHorario, idProf, idClase){
+       
+        $.ajax({
+            url:"/profesor/save_asistencia?"+"idhorario="+idHorario +"&idclase="+idClase+"&idprof="+idProf,
+            dataType: 'html',
+            success: function(response) {
+                $('#alertcontainer').html(response);
+            },error: function (data) {
+            console.log('Error:', data);
+        }
+            });
+    };
+    </script>
     <div class="container-fluid">
         
         <div class="d-flex">
@@ -51,81 +65,49 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="#"> <h3>Sistema de Gestión</h3> <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/profesor/lista_clases"><h5>Mis clases</h5></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/profesor/lista_clases"><h5>Mis horarios</h5></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/profesor/lista_clases"><h5>Mis Asistencias</h5></a>
-                </li>
                 </ul>
                 
             </div>
             </nav>
         </div>
-        
-        <div class="container pt-3">
-            <div class="jumbotron jumbotron-fluid">
-                <div class="container">
-                    <h1 th:text=" 'Bienvenido, ' + ${profesor.nombreProf} + ' ' + ${profesor.apellidoProf}"  ></h1>
-                </div>
-            </div>
-            <button class="btn btn-primary" onclick="mostrar('x')">Registrar asistencias</button>
-        </div> 
+        <!-- Este div se cargará al momento de registrar la asistencia -->
+        <div class="container pt-2" id="alertcontainer"></div>
        
         <div class="container pt-3">
-            <table class="table table-striped table-bordered table-responsive" style="display:none" id="x">
+            <table class="table table-striped table-bordered table-responsive">
                 <thead>                
                     <tr>
-                        <td class="col-2">Nombre de la clase</td>
-                        <td class="col-2">Deporte a practicar</td>
                         <td class="col-2">Dias de la semana</td>
-                        <td class="col-2">Lugares de practica</td>
-                        <td class="col-2">Acciones</td>
+                        <td class="col-2">Lugar de practica</td>
+                        <td class="col-2">Hora de inicio</td>
+                        <td class="col-2">Hora de finalización</td>
+                        <td class="col-2">Seleccionar</td>
+                        <td class="col-1">Estado</td>
+
                     </tr>
                 </thead>
                 <tbody>
-                    
-                    <tr th:each=" clase : ${clases}">
-                        <td th:text="${clase.nombreDep}"></td>
-                        <td th:text="${clase.deporte}"></td>
+                    <tr th:each=" horario: ${horarios}" th:rach>
                         <td>
-                            <span th:each=" horario, iterStat  : ${clase.horarios} ">
-                                <span th:each ="dia: ${horario.dias} " th:text="!${iterStat.last} ? ${dia.diaDeLaSemana} + ', ' : ${dia.diaDeLaSemana} "></span> 
+                            <span th:each=" dia, iterStat  : ${horario.dias} ">
+                                <span th:text="!${iterStat.last} ? ${dia.diaDeLaSemana} + ', ' : ${dia.diaDeLaSemana} "></span> 
                             </span>
                         </td>
-                        <td>
-                            <p th:each=" horario : ${clase.horarios} " th:text="${horario.lugar}"></p>
-                        </td>
-                        
+                        <td th:text="${horario.lugar}"></td>
+                        <td th:text="${horario.hora_inicio}"></td>
+                        <td th:text="${horario.hora_fin}"></td>
                         <td> 
-                            <div id="invalid horario" th:if="${noHayHorarios != null}" class="alert alert-danger" role="alert">
-                                <label> No hay horarios disponibles </label> 
-                            </div>
-                            <div class="d-flex align-items-stretch">
-                                <div class="p-2">
-                                <a class ="btn btn-success" th:href="@{/profesor/registar_asistencia/} + ${clase.idClase}" data-toggle="tooltip" data-placement="top" title="Registrar asistencia"> 
-                                    <span class="fas fa-plus"></span>
-                                </a>
-                                </div>
-                                <div class="p-2">
-                                    <a class ="btn btn-info" th:href="@{/profesor/consultar_horarios/} +${profesor.idProf}+ '/' +${clase.idClase}"data-toggle="tooltip" data-placement="top" title="Consultar horarios">
-                                        <span class="fas fa-clock"></span>
-                                    </a>
-                                </div>
-                            </div>          
+                            <button th:id= "'selectButton-' +${horario.idHorario}" type="button" class="btn btn-success" th:attr= "onclick = |eval('${horario.idHorario}','${idProfesor}' , '${idClase}')|">Seleccionar</button>  
+                        </td>
+                        <td th:if="${asistencias[__horarioStat.index__].estadoAsistencia} == true" data-toggle="tooltip" data-placement="top" title="Asistencia Registrada">
+                            <i class="fas fa-check-circle fa-3x"></i>
+                        </td>
+                        <td th:if="${asistencias[__horarioStat.index__].estadoAsistencia} == false" data-toggle="tooltip" data-placement="top" title="Pendiente">
+                            <i class="far fa-check-circle fa-3x"></i>
                         </td>
                     </tr>
-
-                     
-                   
-                    
                 </tbody> 
-               
             </table>
-            
         </div>
         
     </div>
