Commit registro de asistencias

--- a/src/main/resources/templates/alertas/alerta_tarde.html
+++ b/src/main/resources/templates/alertas/alerta_tarde.html
@@ -1,4 +1,4 @@
-<div class="alert alert-danger">No puede registrarse la asistencia, las asistencias deben registrarse dentro de las 3 horas de finalazidas las clases</div>
+<div class="alert alert-danger">No puede registrarse la asistencia, las asistencias deben registrarse dentro de las 3 horas de finalizadas las clases</div>
 <script>
     swal({
     title:"Asistencia no registrada", 
