--- a/src/main/resources/templates/lista_clases.html
+++ b/src/main/resources/templates/lista_clases.html
@@ -145,18 +145,28 @@
     </div>
 
     <div class="container pt-3">
-      <div class="d-flex flex-row justify-content-center">
-        <div class="row">
-          <button class="btn btn-info p-2 mr-2">Generar infome</button>
-          <button
-            class="btn btn-primary btn-lg p-2"
-            onclick="mostrar('formularioClase')"
-          >
-            Nueva clase
+    <div class="d-flex flex-row justify-content-center">
+      <div class="row">
+        <div class="p-2">
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Generar un informe <i class="fas fa-file-pdf"></i>
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="/admin/lista_profesores/export">Listado de profesores</a>
+              <a class="dropdown-item" href="/admin/lista_clases/export">Listado de clases</a>
+              <a class="dropdown-item" href="#">Horarios por clase</a>
+            </div>
+          </div>
+        </div>
+        <div class="p-2">
+          <button class="btn btn-primary" onclick="mostrar('formularioClase')">
+            Nueva Clase <i class="fas fa-plus-square"></i>
           </button>
         </div>
       </div>
     </div>
+  </div>
     <div class="alert alert-danger" role="alert" th:if="${noExisteClase} == true"> <p>La ultima clase no fue editada, no existe clase con este ID</p></div>
     <div
       class="container pt-3 w-75 h-25"
