--- a/src/main/resources/templates/lista_profesores.html
+++ b/src/main/resources/templates/lista_profesores.html
@@ -72,15 +72,14 @@
   
   <!--Barra de busqueda--> 	  	
       
-  <!--filtrar-->
+  <!--Botones-->
   <div class="container pt-3">
     <div class="d-flex flex-row justify-content-center">
-      
       <div class="row">
         <div class="p-2">
           <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-               <i class="fas fa-file-pdf"></i> Generar un informe
+              Generar un informe <i class="fas fa-file-pdf fa-lg"></i>
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
               <a class="dropdown-item" href="/admin/lista_profesores/export">Listado de profesores</a>
@@ -89,8 +88,10 @@
             </div>
           </div>
         </div>
-        <div class="-2">
-            <button class="btn btn-primary btn-lg" onclick="mostrar('formularioProfesor')">Nuevo Profesor</button>
+        <div class="p-2">
+          <button class="btn btn-primary" onclick="mostrar('formularioProfesor')"> 
+             Nuevo Profesor <i class="fas fa-plus-square fa-lg"></i>
+          </button>
         </div>
       </div>
     </div>
