--- a/src/main/resources/templates/lista_clases.html
+++ b/src/main/resources/templates/lista_clases.html
@@ -182,6 +182,7 @@
                   name="nombre"
                   th:field="*{nombreDep}"
                   class="form-control mr-4 col-lg-3"
+                  required
                 />
                 <label class="mr-2" for="deporte">Deporte:</label>
                 <input
@@ -190,6 +191,7 @@
                   name="deporte"
                   th:field="*{deporte}"
                   class="form-control mr-2 col-lg-3"
+                  required
                 />
                 <button type="submit" class="btn btn-primary">
                   <i class="fas fa-plus"></i>
